solves wordwrap issue and brings back in css min file

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,6 @@ border: 1px solid red !important;
 * {
     font-family: 'Quicksand', sans-serif;
 }
-git
 .container {
     width: 100%;
     flex-wrap: wrap;
@@ -117,6 +116,13 @@ hr {
     font-weight: normal;
 }
 
+.intro {
+
+}
+
+.projects {
+
+}
 @media screen and (max-width: 425px) {
    .nameplate {
     position: relative;
